--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="Stylesheet" href="assignment3.css" type="text/css" />
   </head>
 
-
   <body>
     <header>
       <h1>ARIA Assignment 3</h1>
@@ -24,7 +23,6 @@
         All text here is from
         <a href="http://fillerama.io/" target="_blank" rel="noopener noreferrer"
           >Fillerama</a>:
-          
       </p>
       <div class="tabHolder">
         <ul class="tabList" role="tablist" aria-label="Sample Tabs">
@@ -37,8 +35,6 @@
               aria-controls="adTabPanel"
               tabindex="0"
             >
-
-
               Arrested Development
             </button>
           </li>
@@ -51,8 +47,6 @@
               aria-controls="drWTabPanel"
               tabindex="-1"
             >
-
-
               Doctor Who
             </button>
           </li>
@@ -65,8 +59,6 @@
               aria-controls="futuramaTabPanel"
               tabindex="-1"
             >
-
-
               Futurama
             </button>
           </li>
@@ -81,8 +73,6 @@
             aria-hidden="false"
             tabindex="0"
           >
-
-
             <h2 id="adh2">Arrested Development Filler</h2>
             <h3>I'm afraid I just blue myself.</h3>
             <p>
@@ -135,8 +125,6 @@
             aria-hidden="true"
             tabindex="0"
           >
-
-
             <h2 id="drwh2">Doctor Who Filler</h2>
             <h3>They're not aliens, they're Earth…liens!</h3>
             <p>
@@ -233,36 +221,27 @@
               Yes. You gave me a dollar and some candy. I was all of history's
               great robot actors - Acting Unit 0.8; Thespomat; David Duchovny!
               Now, now. Perfectly symmetrical violence never solved anything.
-              Enough about your promiscuous mother, Hermes! We have bigger
-              problems.
             </p>
             <ul>
-              <li>
-                The alien mothership is in orbit here. If we can hit that
-                bullseye, the rest of the dominoes will fall like a house of
-                cards. Checkmate.
-              </li>
-              <li>Yeah, I do that with my stupidness.</li>
-              <li>Bender, you risked your life to save me!</li>
+              <li>The fact that I ate it anyway, does not really clear me of the crime.</li>
+              <li>Bender?! You stole the atom.</li>
+              <li>No! I want to live! There are still too many things I don't own!</li>
             </ul>
           </div>
         </div>
       </div>
     </main>
 
-
     <footer>
       <p>Go back to <a href="../">ARIA Intro Assignments</a>.</p>
       <p>
         Copyright: <a href="https://www.nordburg.ca/">Andrew Nordlund</a> 2023.
-        <a href="https://github.com/andrewnordlund/aria-intro-tutorial"
-          >Github aria-intro-tutorial</a>
+        <a href="https://github.com/andrewnordlund/aria-intro-tutorial">Github aria-intro-tutorial</a>
+        <br>
+        <a href="https://example.com" target="_blank" rel="noopener noreferrer">New Link</a>
       </p>
-
     </footer>
 
     <script src="assignment3.js"></script>
-
   </body>
-
 </html>
